# DX12_RP-V2

./: .gitattributes  CMakeLists.txt  README.md
Resources/shaders/: pixelShader.hlsl  vertexShader.hlsl
include/: Camera.h  ModelLoader.h  RenderManager.h
include/Engine/: Mesh.h  Transform.h  Vector3.h  Vertex.h
include/_Wrapper/: BufferManager.h  DX12Wrapper.h  WrapperIncludes.h
source/: GraphicsV2.cpp  RenderManager.cpp
